# deepgrad

./: .gitignore  1  CMakeLists.txt  README.md  cmake.bak
deepgrad/: backend.py  tensor.py  utils.py
deepgrad/examples/: app.py  model.py  optimizer.py  train.py
examples/: 1  app.js  asdf.py  backend.py  error.txt  model.pkl  model.py  ops.py  optimizer.py  predict.py  tensor copy.py  tensor.py  train.py  utils.py
examples/templates/: index.html
include/: tensor_ops.h
python/: build_bindings.py  tensor.py
simd-backend/: CMakeLists.txt
simd-backend/include/: tensor_activations.h  tensor_avx_init.h  tensor_broadcast.h  tensor_math.h  tensor_matmul.h  tensor_ops.h  tensor_reductions.h  tensor_softmax_ce.h  tensor_utils.h
simd-backend/src/: tensor_activations.c  tensor_avx_init.c  tensor_broadcast.c  tensor_math.c  tensor_matmul.c  tensor_ops.c  tensor_reductions.c  tensor_softmax_ce.c  tensor_utils.c
src/: .simd_stablediff_ops.c.swp  tensor_ops.c
